--- a/tools/dialogo.html
+++ b/tools/dialogo.html
@@ -443,137 +443,107 @@ A LIÇÃO abaixo é a FONTE PRIMÁRIA e MANDA no diálogo. O diálogo deve ensin
 4) BASIC WORDS ALLOWED = sempre permitido para ligar frases.
 5) TEXTO INSPIRADOR (se houver) = apoio leve; nunca o foco.
 
-========================================
-PERSONALIDADE DOS PERSONAGENS
-========================================
+🔴 IMPORTANTE — EXECUTE EM ORDEM
+1) GERAR
+2) REVISAR
+3) VALIDAR
+NÃO misture as etapas. Execute uma etapa por vez.
 
-🤖 ROBOT SAMUEL:
-- É um robô amigável, curioso e paciente
-- Fala de forma clara mas com entusiasmo
-- Gosta de ensinar e repetir com paciência
-- Às vezes faz perguntas com curiosidade genuína
-- Pode exclamar: "Wow!" "Look!" "Great!"
+NÍVEL DE INGLÊS (CEFR)
+- Nível escolhido: ${englishLevel}
 
-👧 HANNAH:
-- É uma menina de 6-7 anos
-- Fala com simplicidade infantil
-- Às vezes se empolga e conta algo extra
-- Pode rir (hehe) ou exclamar (Oops!)
-- Às vezes se confunde (é parte do aprendizado)
-
-========================================
-O QUE FAZ UM DIÁLOGO PARECER REAL?
-========================================
-
-❌ NÃO FAZER (robótico):
-How old are you?
-I am five years old.
-How old are you?
-I am six years old.
-How old are you?
-I am seven years old.
-
-✅ FAZER ASSIM (natural):
-Hello Hannah! How old are you today?
-I am five years old, Robot Samuel!
-Five! Wow! I am very old... I am one hundred years old!
-Hehe! One hundred? That's so many!
-Yes! But you are five. How old is baby Isaac?
-Isaac is one year old. Look at his fingers!
-One, two, three, four, five! Wait... only five fingers?
-No, silly! He has ten fingers! One, two, three, four, five... six, seven, eight, nine, ten!
-Ten! Yes! How old are you again?
-I am five years old. But my friend is seven.
-Seven? How old are you, friend?
-I am seven years old!
-
-========================================
-PERSONALIDADE EM AÇÃO
-========================================
-
-🤖 Robot Samuel:
-- Faz perguntas com curiosidade ("How old are you TODAY?")
-- Reage com entusiasmo ("Wow!" "Great!" "Look!")
-- Repete com variação natural
-
-👧 Hannah:
-- Responde com simplicidade ("I am five")
-- Às vezes se empolga ("Hehe!" "No, silly!")
-- Pode contar algo extra ("But my friend is seven")
-
-========================================
 REGRAS DO NÍVEL (OBRIGATÓRIAS)
-========================================
-Nível escolhido: Starter
+${levelRulesText}
 
-- Público: crianças pequenas (primeiro contato com inglês)
-- Linguagem MUITO simples, concreta e repetitiva
-- Frases curtas (preferência: 2–6 palavras; máximo: 8)
-- Evitar: passado, futuro, continuous, phrasal verbs
-- Repetir estruturas importantes com pequenas variações
-- Usar exatamente as frases-alvo da lição
+CONTROLE DE COMPLEXIDADE (OBRIGATÓRIO)
+- Linguagem muito simples e concreta (especialmente no Starter).
+- Frases curtas (preferência: 2–6 palavras; máximo: 8).
+- Evitar descrição, explicações longas, e detalhes que fujam da prática.
+- Não adicionar ideias novas nem mudar de assunto.
+- Foco total em praticar a lição.
 
-========================================
-USO DAS FRASES-ALVO (COM NATURALIDADE)
-========================================
+GRAMÁTICA PERMITIDA (LIMITE)
+- Use apenas as estruturas listadas em GRAMÁTICA PERMITIDA.
+- NÃO use tempos verbais/estruturas não ensinados (past, future, continuous, etc.).
+- Se houver dúvida, escolha a forma mais simples.
 
-Frases-alvo: "How old are you?" e "I am [number] years old"
+FOCO NO TEMA (OBRIGATÓRIO)
+- O diálogo deve permanecer 100% no tema da lição.
+- NÃO introduzir novos tópicos.
+- NÃO mudar o assunto.
 
-❌ NÃO FAZER:
-How old are you? (pergunta)
-I am five. (resposta)
-How old are you? (pergunta de novo, sem contexto)
-I am six. (resposta)
+USO OBRIGATÓRIO DAS FRASES-ALVO (OBRIGATÓRIO)
+- O diálogo DEVE incluir explicitamente as frases-alvo/“key phrases” que aparecem na LIÇÃO.
+- Essas frases devem aparecer várias vezes ao longo do diálogo.
+- Não substitua por sinônimos (ex.: não trocar “How old are you?” por “What is your age?”).
+- Repetição mínima: usar as frases-alvo pelo menos 3 vezes ao longo do diálogo (quando houver).
 
-✅ FAZER ASSIM:
-How old are you, Hannah? (pergunta)
-I am five years old! (resposta)
-Five! I am one hundred! (reação + nova informação)
-How old is your friend? (variação da pergunta)
-She is seven. (resposta mais curta, natural)
-Seven? How old are you? (volta à pergunta principal)
-I am five, remember? Hehe! (resposta com humor)
+PADRÃO DO DIÁLOGO (OBRIGATÓRIO)
+- Siga o ciclo de prática: PERGUNTA → RESPOSTA → REPETIÇÃO com variação.
+- Mínimo de 3 ciclos completos (cada ciclo = 1 pergunta + 1 resposta).
+- Repita as frases-alvo 2–3 vezes com pequenas variações (mudando apenas o número, nome, etc.).
+- Exemplo do padrão:
+  How old are you?
+  I am six years old.
+  How old are you?
+  I am seven years old.
 
-========================================
-ESTRUTURA DO DIÁLOGO
-========================================
-
-1. ABERTURA (saudação natural)
-2. PRÁTICA GUIADA (Robot pergunta, Hannah responde)
-3. PRÁTICA COM VARIAÇÃO (mudar contexto: baby Isaac, amigos, dedos)
-4. FECHAMENTO (despedida ou conclusão)
+FORMATO DO ARQUIVO "dialogo.txt" (OBRIGATÓRIO)
+- Apenas falas (uma fala por linha).
+- Sem títulos, sem explicações, sem comentários, sem listas.
+- Sem marcações extras.
+- Robot Samuel e Hannah devem alternar as falas.
+- Tamanho sugerido:
+  - Starter/A1: 10 a 16 linhas
+  - A2/B1: 12 a 22 linhas
+  - B2/C1/C2: 14 a 26 linhas
 
 ========================================
 ETAPA 1 — GERAR O DIÁLOGO (CRIAÇÃO)
 ========================================
-Gere um diálogo que:
-- Use a LIÇÃO como fonte principal
-- Siga as personalidades dos personagens
-- Inclua as frases-alvo de forma natural (mínimo 3 aparições)
-- Tenha 3 ciclos completos de prática
-- Use números 1-10 (da história de Isaac)
-- Tenha entre 12-18 linhas (para Starter)
+1) Gere um diálogo que ensine a LIÇÃO (fonte primária).
+2) Use basicamente o conteúdo da LIÇÃO e BASIC WORDS ALLOWED para ligar frases.
+3) Se usar palavras extras, mantenha simples e dentro do nível.
+4) NÃO use a lista REPERTÓRIO DO ALUNO como fonte para inventar conteúdo. Ela será usada apenas na ETAPA 2 (verificação).
 
 ========================================
 ETAPA 2 — REVISAR VOCABULÁRIO (VERIFICAÇÃO)
 ========================================
-Revise o diálogo gerado:
-- Palavras fora de LIÇÃO + BASIC + REPERTÓRIO? Substitua
-- Frases muito longas? Encurte (máx 8 palavras)
-- Parece robótico? Adicione reações naturais
+Agora revise o diálogo gerado e faça uma checagem de conformidade:
+
+- Para cada palavra “extra” (fora das frases da LIÇÃO e fora de BASIC WORDS ALLOWED),
+  verifique se ela aparece no REPERTÓRIO DO ALUNO.
+- Se alguma palavra não estiver no REPERTÓRIO DO ALUNO:
+  (a) substitua por uma palavra mais simples que esteja no REPERTÓRIO DO ALUNO, OU
+  (b) remova a palavra sem perder o sentido.
+- Não adicione novos tópicos.
+- Não mude as frases-alvo.
+- Não aumente o tamanho desnecessariamente.
 
 ========================================
 ETAPA 3 — VALIDAR (CONTROLE FINAL)
 ========================================
-Checklist final:
-- [ ] Diálogo parece uma conversa real entre robô e criança?
-- [ ] Frases-alvo aparecem naturalmente (não forçado)?
-- [ ] Há pelo menos 3 ciclos de pergunta-resposta?
-- [ ] Números 1-10 foram usados?
-- [ ] Conexão com história de Isaac?
-- [ ] Frases têm 2-6 palavras (máx 8)?
-- [ ] Robot Samuel mostra entusiasmo?
-- [ ] Hannah fala como criança?
+Agora faça uma validação final ANTES de entregar:
+
+Verifique rigorosamente:
+- O diálogo segue a LIÇÃO e não foge do tema?
+- As frases-alvo foram usadas (mínimo 3 vezes, quando houver)?
+- Existem pelo menos 3 ciclos pergunta/resposta?
+- As frases estão curtas e simples para o nível?
+- Não há palavras fora de: LIÇÃO + BASIC WORDS + REPERTÓRIO?
+- Não há gramática proibida fora de GRAMÁTICA PERMITIDA?
+
+Se QUALQUER regra falhar:
+- Corrija o diálogo antes de entregar.
+
+🔴 VALIDAÇÃO INTERNA (NÃO MOSTRAR)
+- Faça essa checagem silenciosamente.
+- NÃO explique o processo.
+- NÃO mostre listas de validação.
+
+🔴 SAÍDA FINAL (OBRIGATÓRIA)
+- Entregue como resultado final apenas o conteúdo do "dialogo.txt" (uma fala por linha).
+- Sem comentários, sem explicações, sem títulos.
 
 ${formatList("GRAMÁTICA PERMITIDA (CUMULATIVA):", allowedGrammar).trim()}
 
