--- a/tools/dialogo.html
+++ b/tools/dialogo.html
@@ -753,8 +753,12 @@ EXEMPLO APENAS DE FORMATO (NÃO COPIAR CONTEÚDO)
 
 Hello, Hannah!
 Hello, Robot Samuel!
+
 How old are you?
 I am six years old.
+
+Very good, Hannah!
+Thank you!
 `.trim();
 
     const prompt1 = `
