--- a/Level0/Unit3/teacher/index.html
+++ b/Level0/Unit3/teacher/index.html
@@ -517,7 +517,10 @@
                 'imagem4.png',
                 'imagem5.png',
                 'imagem6.png',
-                'imagem7.png'
+                'imagem7.png',
+                'imagem8.png',
+                'imagem9.png',
+                'imagem10.png'
             ];
 
             let html = `<h3>Documents</h3>`;
@@ -588,7 +591,15 @@
 
             const imageFiles = [
                 'imagem21.png',
-                'imagem22.png'                
+                'imagem22.png',
+                'imagem23.png',
+                'imagem24.png',
+                'imagem25.png',
+                'imagem26.png',
+                'imagem27.png',
+                'imagem28.png',
+                'imagem29.png',
+                'imagem210.png'                
             ];
 
             let html = `<h3>Bible Documents</h3>`;
