--- a/tools/QA_Writing.html
+++ b/tools/QA_Writing.html
@@ -503,25 +503,73 @@
 ``,
 `BlockC_prompts.txt (se houver grupo C)`,
 ``,
-`Cada enunciado de questão deve estar em uma linha`,
+`Cada enunciado deve estar em uma linha.`,
+``,
+`⚠️ FORMATO OBRIGATÓRIO DO TXT:`,
+``,
+`- Apenas texto simples (plain text)`,
+`- Uma linha por prompt`,
+`- Sem colchetes []`,
+`- Sem vírgulas`,
+`- Sem aspas`,
+`- Sem JSON`,
+`- Sem "file"`,
+`- Sem "lines"`,
+`- Sem qualquer estrutura`,
+``,
+`O conteúdo deve ser TEXTO LIMPO, CRU e DIRETO.`,
+``,
+`Exemplo de formato correto:`,
+``,
+`WRITE: GOD`,
+`WRITE: WORLD`,
+`WRITE: GOD.`,
+`WRITE: WORLD.`,
+`WRITE: LIGHT.`,
+`Listen. Choose.`,
+`Listen. Choose.`,
+`WRITE: SKY.`,
+`WRITE: WATER.`,
+`WRITE: LAND.`,
 ``,
 `✅ Regra adicional (fixação dos enunciados nos arquivos .txt):`,
-`- Para ORDER: a linha deve ser exatamente "WRITE: {WORD}" (com a palavra real)`,
-`- Para FILLBLANK: a linha deve ser exatamente "WRITE: {WORD_WITH_BLANK}." (com a palavra completa e real. Por exemplo, no lugar de W{blank}RD usar WORD)`,
-`- Para LISTEN. CHOOSE.: a linha deve ser exatamente "Listen. Choose."`,
+``,
+`- Para ORDER:`,
+`  A linha deve ser exatamente:`,
+`  WRITE: {WORD}`,
+`  (usar a palavra real completa)`,
+``,
+`- Para FILLBLANK:`,
+`  A linha deve ser exatamente:`,
+`  WRITE: {WORD_WITH_BLANK}.`,
+`  Porém, no arquivo TXT, NÃO deve aparecer {blank}.`,
+`  Deve ser usada a palavra completa.`,
+``,
+`  Exemplo:`,
+`  JSON → WRITE: W{blank}RD.`,
+`  TXT → WRITE: WORD.`,
+``,
+`- Para LISTEN. CHOOSE.:`,
+`  A linha deve ser exatamente:`,
+`  Listen. Choose.`,
 ``,
 `7) SAÍDA ESPERADA`,
 ``,
-`Retorne APENAS JSON`,
+`- Para as questões: retornar APENAS JSON`,
+`- Para os prompts: retornar APENAS TEXTO (TXT)`,
 ``,
-`Um bloco JSON SEPARADO por grupo`,
+`- Um bloco JSON separado por grupo`,
+`- Um bloco TXT separado por grupo`,
 ``,
-`Sem comentários`,
+`⚠️ IMPORTANTE:`,
 ``,
-`Sem explicações`,
-``,
-`Sem texto fora do JSON`,
-``,
+`- Não misturar JSON com TXT`,
+`- Não colocar JSON dentro do TXT`,
+`- Não adicionar explicações`,
+`- Não adicionar comentários`,
+`- Não adicionar títulos`,
+`- Não adicionar texto extra fora dos blocos`,
+
 `🎯 OBJETIVO FINAL`,
 ``,
 `Gerar atividades que:`,
