--- a/tools/GrammarStarter.html
+++ b/tools/GrammarStarter.html
@@ -169,6 +169,15 @@ async function fetchJSON(url){
   return await res.json();
 }
 
+/**
+ * IMPORTANTE:
+ * - Aqui foi alterado SOMENTE o texto do prompt gerado (buildPrompt),
+ *   para exigir:
+ *   (1) dois blocos separados (GRAMMAR e IMAGENS),
+ *   (2) ambos em blocos de código,
+ *   (3) comandos visíveis (não renderizados),
+ *   (4) nada fora dos blocos.
+ */
 function buildPrompt(bib, theme, cefr, level, unit){
 
 return `
@@ -196,28 +205,58 @@ ${theme}
 ====================
 OBJETIVO DO GERADOR
 ====================
-Gerar SOMENTE o conteúdo do arquivo "texto.txt", seguindo fielmente o formato descrito abaixo. Não comentar e não explicar nada fora do arquivo.
+Gerar SOMENTE o conteúdo do arquivo "texto.txt", mas dividido em DOIS BLOCOS separados (GRAMMAR e IMAGENS), seguindo fielmente o formato descrito abaixo.
+Não comentar e não explicar nada fora dos blocos.
 
 =========================
-FORMATO (EXEMPLO)
+FORMATO (OBRIGATÓRIO)
 =========================
-Title: >>> título em inglês
+
+A resposta deve conter EXATAMENTE 2 BLOCOS de código, nesta ordem:
+
+1) BLOCO GRAMMAR
+2) BLOCO IMAGENS
+
+❗NÃO escrever NADA fora dos blocos.
+❗NÃO misturar GRAMMAR com IMAGENS no mesmo bloco.
+
+-------------------------
+BLOCO 1 — GRAMMAR
+-------------------------
+Deve conter APENAS:
+Title
+# GRAMMAR
+conteúdo completo com subtítulos, imagens e tabelas
+
+Deve estar dentro deste formato (com id fixo):
+
+\`\`\`id="grammar_canva"
+Title: >>> title in English
 
 # GRAMMAR
->>> Introdução 
+>>> short intro
 
-## 1. >>> Subtítulo 1
+## 1. >>> subtitle
 #IMG:>>>imagem1.png
->>> Explicação 
+>>> explanation (kids, short, clear)
 
 TableStart
->>>Coluna1 | >>>Coluna2
->>>itemA | itemB
->>>itemC | itemD
+Coluna1 | Coluna2
+itemA | itemB
+itemC | itemD
 TableEnd
+\`\`\`
 
+-------------------------
+BLOCO 2 — IMAGENS
+-------------------------
+Deve conter APENAS a seção de imagens (descrições) e estar dentro deste formato (com id fixo):
+
+\`\`\`id="images_canva"
 # IMAGENS
-Imagem1: >>> descrição da imagem 1
+Imagem1: >>> detailed description (prompt)
+Imagem2: >>> detailed description (prompt)
+\`\`\`
 
 =====================
 REGRAS ESSENCIAIS
@@ -228,13 +267,14 @@ REGRAS ESSENCIAIS
 ✔ Explicações curtas, claras, carinhosas
 ✔ Manter título, # GRAMMAR, seções e tabelas
 ✔ Usar ## para subtítulo
-✔ Usar "#IMG:" antes de cada imagem
-✔ Usar **negrito** apenas fora de tabelas
+✔ Usar "#IMG:" antes de cada imagem citada na GRAMMAR
+✔ Usar **negrito** apenas fora de tabelas (mas como texto literal, com os asteriscos visíveis)
 ✔ NÃO usar negrito/itálico dentro de tabelas
 ✔ Manter "TableStart" / "TableEnd" exatamente
-✔ Devolver APENAS o arquivo (sem comentários)
+✔ NÃO renderizar formatação: os comandos devem aparecer como texto literal (ex: **word**, ##, #IMG:)
+✔ A resposta final deve conter exatamente 2 blocos de código e NADA fora deles
 
-Agora, gere apenas o arquivo "texto.txt" seguindo as regras.
+Agora, gere apenas o conteúdo do arquivo "texto.txt" seguindo as regras.
 `.trim();
 
 }
